# melodic-delay

./: .gitignore  CMakeLists.txt  README.md
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-23-bugfix-and-vst.md
src/cli/: main.cpp
src/core/: Envelope.cpp  Envelope.h  MelodicDelay.cpp  MelodicDelay.h  PitchShifter.cpp  PitchShifter.h  RingBuffer.cpp  RingBuffer.h
src/vst/: MelodicDelayPlugin.h
tests/: CMakeLists.txt  test_envelope.cpp  test_melodic_delay.cpp  test_pitch_shifter.cpp  test_ring_buffer.cpp
vst/: CMakeLists.txt
vst/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
